--- a/src/Burger.css
+++ b/src/Burger.css
@@ -1,24 +1,17 @@
 .Burger{
-    width: 3%;
-    min-width: 2.5rem;
+    width: 2%;
+    min-width: 2rem;
     cursor: pointer;
     padding: 0 1.5rem;
     margin:auto;
-    display: none;
+    float:right;
 }
 
 
 .Burger div{
     background-color:  #232323;
     height: 3px;
-    margin-top:10px;
+    margin-top:6px;
     border-radius: 15px 50px;
 }
 
-
-@media only screen and (max-width: 600px) {
-    .Burger{
-        padding:1rem 1rem;
-        display: block;
-      }
-  }
