--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -41,6 +41,8 @@
     font-size:40px;
     transform: rotate(45deg);
     float:right;
+    background-color: rgb(255,255,255,0.5);
+    border:1px solid blue;
   }
 
 .MenuPage ul{
