--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -2,10 +2,7 @@
     padding: 1rem 0;
     width: 100%;
     height: 100%;
-    background-image: url('images/mibenki.png');
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: rgb(255,255,255,1);
     position: fixed; 
     top:0;
     bottom:0;
