--- a/src/Menu.css
+++ b/src/Menu.css
@@ -14,7 +14,7 @@
   margin:0;
   width: 100%;
   padding:0.5rem 0;
-  background-color:rgb(255,255,255,1);
+  background-color:#FAF0E6;
   display: none;
 }
 
