--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -2,7 +2,7 @@
     padding: 1rem 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(255,255,255,1);
+    background-color: #FAF0E6;
     position: fixed; 
     top:0;
     bottom:0;
