--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color:rgb(224, 193, 162,0.5);
   background-position: top;
   height: 100%;
   width: 100%;
