--- a/src/Form.css
+++ b/src/Form.css
@@ -1,6 +1,7 @@
 .register{
     background-color: #b60000;
     padding:0.5rem 0;
+    height: 100%;
 }
 
 .register:hover{
@@ -21,8 +22,8 @@ form{
     font-size:18px;
     border:none;
     border-radius: 0;
-    padding:0.5rem 0;
-    margin:0;
+    padding:0.5rem;
+    height: 100%;
     background-color: rgb(255,255,255,0.9);
     font-family: 'Optima';
     color: #232323;
