--- a/src/App.css
+++ b/src/App.css
@@ -94,9 +94,8 @@ a{
 }
 
 .page_title{
-  font-family: 'monaco';
-  color:black;
-  font-size: 40px;
+  color:#232323;
+  font-size: 30px;
   padding:1rem;
 }
 
