--- a/src/Footer.css
+++ b/src/Footer.css
@@ -25,7 +25,7 @@
 
 .Footer .media{
     border-top:1px solid #bfbfaf;
-    margin:1rem auto;
+    margin:0 auto;
     padding:1rem;
     max-width: 800px;
     
