--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ a{
 
 .page_title{
   color:#232323;
-  font-family: 'Chalkduster','Brush Script MT';
+  font-family: 'Amsterdam One';
   font-size: 30px;
   padding:1rem;
   margin-left:5%;
