--- a/src/App.css
+++ b/src/App.css
@@ -104,8 +104,10 @@ a{
 }
 
 .page_title_img{
-  width:50%;
-  margin-right:40%;
+  width:40%;
+  margin-right:50%;
+  margin-bottom: 0;
+  margin-top:10%;
 }
 
 
