--- a/src/Categories.css
+++ b/src/Categories.css
@@ -1,7 +1,7 @@
 
 
 .Categories{
-    display: flex;
+    display: none;
     flex-direction: column;
     text-align: center;
     width: 80%;
@@ -15,3 +15,9 @@
     margin:0.5rem;
     text-transform: capitalize;
 }
+
+@media only screen and (max-width: 600px) {
+    .Categories{
+        display: flex;
+    }
+  }
