--- a/src/App.css
+++ b/src/App.css
@@ -104,8 +104,7 @@ a{
 }
 
 .page_title_img{
-  height:50px;
-  margin-top:10%;
+  display: none;
 }
 
 
@@ -127,13 +126,26 @@ p{
   min-width: 50px;
 }
 
+.articles2{
+  margin-top:-10%;
+  margin-bottom:10%;
+}
+
 @media only screen and (max-width: 600px) {
   .articles2{
-    margin-top:20%;
+    margin-top:30%;
+    margin-bottom:0;
   }
 
   .App{
     background-position: center 30px;
+  }
+
+  .page_title_img{
+    height:50px;
+    margin-top:10%;
+    display:block;
+    margin:auto;
   }
 }
 
