--- a/src/Header.css
+++ b/src/Header.css
@@ -1,37 +1,52 @@
 .Header{
-    text-align: center;
-    padding: 3rem 0;
+    padding-top: 3rem;
     padding-bottom: 1rem;
-    margin:0;
     background-color: rgb(255,255,255,0.5);
-    border:none;
 }
 
-.Header .Title{
-    margin:auto;
-    width: 30%;
-    min-width: 200px;
+.Header .Header-top-container{
+    margin:0 auto;
     padding:0;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
 }
 
+.Header .Header-top-container .navlink{
+  margin:auto 1rem;
+}
 
+.Header .Header-top-container .underline{
+  text-decoration: underline;
+}
+.Header .Header-top-container a{
+  color: #232323;
+  margin: 1rem;
+  font-size: 20px;
+  font-weight: bold;
+  white-space: nowrap;
+}
 
+.Header .Header-top-container .title{
+  margin:0 1rem;
+  padding:0;
+  font-size:30px;
+}
 
 .follow_button{
-    font-size:18px;
-    color:white;
-    margin:0;
-    background-color: #232323;
-    padding:0.2rem 1rem ;
-    margin:auto;
-    font-weight: 300;
+  width: 80px;
+  font-size:18px;
+  color:white;
+  margin:auto 0;
+  margin-right:1rem;
+  background-color: #232323;
+  padding:0.2rem 1rem ;
+  font-weight: 300;
 }
 
 .follow_button:hover{
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .Form-container_Black .close{
@@ -41,19 +56,18 @@
     transform: rotate(45deg);
     float:right;
     margin:0.5rem 1rem;
+  
 }
 
 .Form-container_Black .close:hover{
     transform: rotate(90deg);
 }
 
+.Form-container_Black {
+  position: fixed;
+}
+
 @media only screen and (max-width: 600px) {
-    h1{
-        font-size:30px;
-      }
-      .follow_button{
-        font-size:15px;
-    }
   
       .Menu{
         display:none;
@@ -61,5 +75,11 @@
 
   .Header{
     display: none;
+  }
+
+  .follow_button{
+
+    padding:0.2rem;
+
   }
 }
