--- a/src/Menu.css
+++ b/src/Menu.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: row;
   margin:0 1rem;
+  padding:0.35rem 0;
   justify-content: space-between;
 }
 
@@ -84,10 +85,12 @@ ul{
 
 .title{
   padding:0;
+  margin:auto;
   margin-right:1rem;
-  font-size:30px;
+  font-size:22px;
   color: #232323;
   font-weight: bold;
+
 }
 
 
@@ -117,6 +120,7 @@ ul{
     }
     .follow_button{
       font-size:15px;
+      width: 80px;
   }
 
     .Menu{
